# grpc-mtk

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  makefile
bindings/csharp/: Client.cs  Conn.cs  Core.cs  Dapper  Database.Migration.cs  Database.TypeMapper.cs  Database.cs  Error.cs  IServerLogic.cs  Log.cs  Mtk.cs  Protobuf.cs  Server.cs  Time.cs  Util.cs
bindings/csharp/Ext/: Dapper  Google.Protobuf
bindings/csharp/Ext/FluentMigrator/: IMigrationProcessor.cs
bindings/csharp/Ext/FluentMigrator.Runner/Extensions/: CompatabilityModeExtension.cs
bindings/csharp/Ext/FluentMigrator.Runner/Processors/MySql/: MySqlProcessor.cs
bindings/csharp/Ext/FluentMigrator/Infrastructure/: IMigrationContext.cs  IMigrationInfo.cs  MigrationContext.cs
bindings/csharp/Ext/Google.Protobuf/lib/net35/: Google.Protobuf.xml
bindings/csharp/Ext/Mono.Data.Sqlite/lib/net35/: Mono.Data.Sqlite.dll.bk
bindings/csharp/Ext/Simple.Migrations/: AssemblyMigrationProvider.cs  IDatabaseProvider.cs  ILogger.cs  IMigration.cs  IMigrationLogger.cs  IMigrationProvider.cs  ISimpleMigrator.cs  Migration.cs  MigrationAttribute.cs  MigrationData.cs  MigrationDirection.cs  MigrationException.cs  MigrationLoadFailedException.cs  MissingMigrationException.cs  NullLogger.cs  SimpleMigrator.cs  SimpleMigrator`2.cs
bindings/csharp/Ext/Simple.Migrations/Console/: ConsoleLogger.cs  ConsoleRunner.cs  HelpNeededException.cs  SubCommand.cs
bindings/csharp/Ext/Simple.Migrations/DatabaseProvider/: DatabaseProviderBase.cs  DatabaseProviderBaseWithAdvisoryLock.cs  DatabaseProviderBaseWithVersionTableLock.cs  MssqlDatabaseProvider.cs  MysqlDatabaseProvider.cs  PostgresqlDatabaseProvider.cs  SqliteDatabaseProvider.cs
bindings/csharp/Ext/Simple.Migrations/Properties/: AssemblyInfo.cs
bindings/csharp/Ext/System.Data/lib/net35/: System.Data.dll.old
bindings/csharp/Unity/: Cluster.cs  ComposeFile.cs  ExitHandler.cs  InClientCluster.cs  InClientServer.cs  README.md  Util.Unity.cs  YamlDotNet
bindings/csharp/Unity/Google.Protobuf/: ByteString.cs
bindings/csharp/Unity/Google.Protobuf/Reflection/: MessageDescriptor.cs
bindings/unity/: IServerLogic.cs  Mtk.cs
bindings/unity/Bridge/: InClientServer.cs
src/: atomic_compat.h  certs.cpp  codec.cpp  codec.h  conn.cpp  conn.h  debug.h  defs.h  delegate.cpp  delegate.h  http.cpp  http.h  logger.cpp  logger.h  mtk.cpp  mtk.h  platform.h  rpc.cpp  rpc.h  server.cpp  server.h  stream.cpp  stream.h  timespec.cpp  timespec.h  worker.cpp  worker.h
src/ext/MoodyCamel/: atomicops.h
src/proto/: mtk.proto
src/proto/src/: mtk.grpc.pb.cc  mtk.grpc.pb.h  mtk.pb.cc  mtk.pb.h
test/e2e/: common.cpp  common.h  makefile
test/e2e/client/: CMakeLists.txt  main.cpp
test/e2e/client/tests/: bench.cpp  bench.h  ping.cpp  ping.h  reconnect.cpp  reconnect.h  rpc.cpp  rpc.h
test/e2e/proto/: test.pb.cc  test.pb.h  test.proto
test/e2e/server/: CMakeLists.txt  main.cpp
test/http/: makefile
test/http/client/: CMakeLists.txt  main.cpp
test/http/server/: CMakeLists.txt  main.cpp
toolchain/: android.cmake  ios.cmake
tools/cmake/: android.cmake  bundle.cmake  ios.cmake  linux.cmake  testlib.cmake
tools/cmake/resources/: gen.sh
tools/filelist/: areslist.cmake  gen.sh  list.cmake  lists.cmake  makefile  ssllist.cmake  zlist.cmake
